--- a/package.json
+++ b/package.json
@@ -5,27 +5,34 @@
   "type": "module",
   "scripts": {
     "start": "vite",
-    "dev": "vite",
+    "dev-server": "vite",
+    "dev": "concurrently \"env GDK_BACKEND=x11 bun run tauri dev\" \"cd ../eduserver && bun run dev\"",
     "build": "vite build",
     "serve": "vite preview",
     "tauri": "tauri"
   },
   "license": "MIT",
   "dependencies": {
+    "@iconify-icon/solid": "^3.0.0",
+    "@iconify/tailwind4": "^1.0.6",
+    "@solid-primitives/storage": "^4.3.3",
     "@solidjs/meta": "^0.29.4",
     "@solidjs/router": "^0.15.3",
     "@tailwindcss/vite": "^4.1.11",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-http": "~2",
     "@tauri-apps/plugin-opener": "^2",
+    "@tauri-apps/plugin-store": "~2",
     "@types/uuid": "^10.0.0",
+    "concurrently": "^9.2.0",
     "solid-icons": "^1.1.0",
     "solid-js": "^1.9.3",
     "tailwindcss": "^4.1.11",
+    "tauri-plugin-keyring-api": "^0.1.1",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
-    "@tauri-apps/cli": "^2",
+    "@tauri-apps/cli": "^2.6.2",
     "typescript": "~5.6.2",
     "vite": "^6.0.3",
     "vite-plugin-solid": "^2.11.0",
