--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -25,6 +25,8 @@ serde_json = "1"
 wgpu = "26.0.1"
 webkit2gtk = "2.0.1"
 tauri-plugin-http = "2"
+tauri-plugin-keyring = "0.1.0"
+tauri-plugin-store = "2"
 
 [profile.dev]
 incremental = true
