--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -16,9 +16,11 @@ crate-type = ["staticlib", "cdylib", "rlib"]
 
 [build-dependencies]
 tauri-build = { version = "2", features = [] }
+tauri-runtime-verso-build = { git = "https://github.com/versotile-org/tauri-runtime-verso.git" }
 
 [dependencies]
-tauri = { version = "2", features = [] }
+tauri = { version = "2.6.1", default-features = false, features = ["common-controls-v6", "x11"] }
+tauri-runtime-verso = { git = "https://github.com/versotile-org/tauri-runtime-verso.git" }
 tauri-plugin-opener = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
