--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "start": "vite",
-    "dev-server": "vite",
+    "dev-server": "vite --host",
     "dev": "bun run tauri dev",
     "build": "vite build",
     "serve": "vite preview",
