--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/uuid": "^10.0.0",
     "dompurify": "^3.2.6",
     "solid-icons": "^1.1.0",
+    "solid-infinite-scroll": "^1.0.1",
     "solid-js": "^1.9.3",
     "solid-transition-group": "^0.3.0",
     "tailwindcss": "^4.1.11",
