--- a/package.json
+++ b/package.json
@@ -27,9 +27,10 @@
     "@tauri-apps/plugin-store": "~2",
     "@types/bun": "^1.2.19",
     "@types/uuid": "^10.0.0",
+    "apexcharts": "^5.3.4",
     "chart.js": "^4.5.0",
     "dompurify": "^3.2.6",
-    "solid-chartjs": "^1.3.11",
+    "solid-apexcharts": "^0.6.0",
     "solid-icons": "^1.1.0",
     "solid-infinite-scroll": "^1.0.1",
     "solid-js": "^1.9.3",
