--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -32,6 +32,9 @@ tauri-plugin-http = "2"
 tauri-plugin-keyring = "0.1.0"
 tauri-plugin-store = "2"
 tauri-plugin-fs = "2"
+rand = "0.9.2"
+sha2 = "0.10.9"
+pbkdf2 = "0.12.2"
 
 [profile.dev]
 incremental = false
