--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "vite",
     "dev-server": "vite --host",
     "dev": "bun run tauri dev",
-    "build": "vite build",
+    "build:frontend": "vite build",
+    "build": "NO_STRIP=true tauri build",
+    "build:debug": "NOSTRIP=true tauri build -- --debug",
     "serve": "vite preview",
     "tauri": "tauri"
   },
