fix: i forgot to do git add

--- a/.gitea/workflows/build.yml
+++ b/.gitea/workflows/build.yml
@@ -24,17 +24,14 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: add yarn mirror
-        if: matrix.platform == 'ubuntu-22.04'
-        run: |
-          curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | sudo apt-key add -
-          echo "deb https://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list
+      - name: add yarn
+        run: npm install -g yarn
 
       - name: Install dependencies (ubuntu only)
         if: matrix.platform == 'ubuntu-22.04'
         run: |
           sudo apt-get update
-          sudo apt-get install -y libwebkit2gtk-4.1-dev libappindicator3-dev librsvg2-dev patchelf yarn
+          sudo apt-get install -y libwebkit2gtk-4.1-dev libappindicator3-dev librsvg2-dev patchelf
 
       - name: Setup Node
         uses: actions/setup-node@v4
