--- a/.gitea/workflows/build.yml
+++ b/.gitea/workflows/build.yml
@@ -49,7 +49,7 @@ jobs:
         run: npm install
 
       - name: Build the app
-        run: yarn tauri build
+        run: npm tauri build
 
       - name: Generate changelog
         run: |
