--- a/.gitea/workflows/build.yml
+++ b/.gitea/workflows/build.yml
@@ -30,6 +30,9 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y libwebkit2gtk-4.1-dev libappindicator3-dev librsvg2-dev patchelf clang
 
+      - name: Install LLVM
+        run: bash -c "$(wget -O - https://apt.llvm.org/llvm.sh)"
+
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
