--- a/.gitea/workflows/build.yml
+++ b/.gitea/workflows/build.yml
@@ -28,7 +28,7 @@ jobs:
         if: matrix.platform == 'ubuntu-22.04'
         run: |
           sudo apt-get update
-          sudo apt-get install -y --no-install-recommends libwebkit2gtk-4.1-dev libappindicator3-dev librsvg2-dev patchelf clang cmake libssl-dev
+          sudo apt-get install -y --no-install-recommends libwebkit2gtk-4.1 libappindicator3 librsvg2-dev patchelf clang cmake libssl-dev
 
       - name: Install LLVM
         run: bash -c "$(wget -O - https://apt.llvm.org/llvm.sh)"
@@ -37,7 +37,6 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: lts/*
-          cache: "npm"
 
       - name: Install Rust stable
         uses: dtolnay/rust-toolchain@stable
