--- a/.gitea/workflows/build.yml
+++ b/.gitea/workflows/build.yml
@@ -28,7 +28,7 @@ jobs:
         if: matrix.platform == 'ubuntu-22.04'
         run: |
           sudo apt-get update
-          sudo apt-get install -y --no-install-recommends libwebkit2gtk-4.1 libayatana-appindicator3-1 librsvg2-dev patchelf clang cmake libssl-dev
+          sudo apt-get install -y --no-install-recommends libwebkit2gtk-4.1 libayatana-appindicator3-1 librsvg2-dev patchelf lld cmake libssl-dev
 
       - name: Install LLVM
         run: bash -c "$(wget -O - https://apt.llvm.org/llvm.sh)"
