--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev-server": "vite --host",
     "dev": "bun run tauri dev",
     "build:frontend": "vite build",
-    "build": "NO_STRIP=true tauri build",
+    "build": "NO_STRIP=true tauri build --release",
     "build:debug": "NOSTRIP=true tauri build -- --debug",
     "serve": "vite preview",
     "tauri": "tauri"
