--- a/.gitea/workflows/build.yml
+++ b/.gitea/workflows/build.yml
@@ -40,6 +40,9 @@ jobs:
         with:
           bun-version: latest
 
+      - name: Install Yarn
+        run: npm install -g yarn
+
       - name: Install Rust stable
         uses: dtolnay/rust-toolchain@stable
         with:
