--- a/.gitea/workflows/build.yml
+++ b/.gitea/workflows/build.yml
@@ -40,8 +40,10 @@ jobs:
         with:
           bun-version: latest
 
-      - name: Install Yarn
-        run: npm install -g yarn
+      - name: Setup Latest Yarn
+        uses: threeal/setup-yarn-action@v2.0.0
+        with:
+          version: latest
 
       - name: Install Rust stable
         uses: dtolnay/rust-toolchain@stable
