--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,22 +38,12 @@ jobs:
           sudo apt-get install -y --no-install-recommends libwebkit2gtk-4.1 libayatana-appindicator3-1 librsvg2-dev patchelf libgtk-3-dev pkg-config libglib2.0-dev libpango1.0-dev \
           libcairo2-dev libgdk-pixbuf2.0-dev libatk1.0-dev libharfbuzz-dev pkg-config xdg-utils
 
-      - name: install dependencies (macOS only)
-        if: startsWith(matrix.platform, 'macos-latest')
-        run: |
-          brew update
-          brew install pkg-config glib cairo pango gdk-pixbuf libiconv
-
       - name: Install build tools on Windows
         if: startsWith(matrix.platform, 'windows')
         run: |
           choco install -y pkgconfiglite msys2
           ridk exec pacman -Syu --noconfirm
-          ridk exec pacman -S --noconfirm \
-            mingw-w64-x86_64-toolchain \
-            mingw-w64-x86_64-glib2 \
-            mingw-w64-x86_64-pango \
-            mingw-w64-x86_64-cairo
+          ridk exec pacman -S --noconfirm mingw-w64-x86_64-toolchain mingw-w64-x86_64-glib2 mingw-w64-x86_64-pango mingw-w64-x86_64-cairo
           echo "PKG_CONFIG_PATH=C:\\msys64\\mingw64\\lib\\pkgconfig" >> $GITHUB_ENV
 
       - name: setup node
