--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,6 +38,14 @@ jobs:
           sudo apt-get install -y --no-install-recommends libwebkit2gtk-4.1 libayatana-appindicator3-1 librsvg2-dev patchelf libgtk-3-dev pkg-config libglib2.0-dev libpango1.0-dev \
           libcairo2-dev libgdk-pixbuf2.0-dev libatk1.0-dev libharfbuzz-dev pkg-config xdg-utils
 
+      - name: Cache MSYS2
+        if: startsWith(matrix.platform, 'windows')
+        uses: actions/cache@v3
+        with:
+          path: C:\msys64
+          key: windows-msys2-1
+          restore-keys: windows-msys2-
+
       - name: Install build tools on Windows
         if: startsWith(matrix.platform, 'windows')
         run: |
