--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -54,9 +54,11 @@ jobs:
           choco install -y msys2
           ridk exec pacman -Syu --noconfirm
           ridk exec pacman -S --noconfirm mingw-w64-x86_64-toolchain mingw-w64-x86_64-glib2 mingw-w64-x86_64-pango mingw-w64-x86_64-cairo
+          echo "C:\msys64\usr\bin;C:\msys64\mingw64\bin" >> $GITHUB_PATH
+          echo "PKG_CONFIG_PATH=/mingw64/lib/pkgconfig" >> $GITHUB_ENV
+          echo "PKG_CONFIG=/mingw64/bin/pkg-config" >> $GITHUB_ENV
+          rustup target add x86_64-pc-windows-gnu
           echo "PKG_CONFIG_PATH is now $env:PKG_CONFIG_PATH"
-          echo "C:\tools\msys64\usr\bin;C:\tools\msys64\mingw64\bin" >> $GITHUB_PATH
-          echo "C:\tools\msys64\usr\lib\pkgconfig;C:\tools\msys64\usr\share\pkgconfig" >> $GITHUB_ENV
 
       - name: setup node
         uses: actions/setup-node@v4
