--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,7 +33,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: install dependencies (ubuntu only)
+      - name: Install Deps (Linux)
         if: startsWith(matrix.platform, 'ubuntu-22.04')
         run: |
           sudo apt-get update
@@ -49,15 +49,17 @@ jobs:
           restore-keys: windows-msys2-
 
       - name: Install MSYS2 + deps
+        if: startsWith(matrix.platform, 'windows')
         run: |
           choco install -y msys2
-          ridk exec pacman -Syu --noconfirm
-          ridk exec pacman -S --noconfirm mingw-w64-x86_64-toolchain mingw-w64-x86_64-glib2 mingw-w64-x86_64-pango mingw-w64-x86_64-cairo
+          ridk exec pacman -Syy
+          ridk exec pacman -S --noconfirm mingw-w64-x86_64-toolchain mingw-w64-x86_64-glib2 mingw-w64-x86_64-pango mingw-w64-x86_64-cairo mingw-w64-x86_64-atk
           echo "C:\msys64\usr\bin;C:\msys64\mingw64\bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
           echo "PKG_CONFIG_PATH=C:/msys64/mingw64/lib/pkgconfig" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
           echo "PKG_CONFIG=C:/msys64/mingw64/bin/pkg-config.exe" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
 
       - name: Switch Rust to GNU toolchain
+        if: startsWith(matrix.platform, 'windows')
         run: |
           rustup set default-host x86_64-pc-windows-gnu
           rustup default stable-x86_64-pc-windows-gnu
