--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -53,7 +53,13 @@ jobs:
         run: |
           choco install -y msys2
           ridk exec pacman -Syy
-          ridk exec pacman -S --noconfirm mingw-w64-x86_64-toolchain mingw-w64-x86_64-glib2 mingw-w64-x86_64-pango mingw-w64-x86_64-cairo mingw-w64-x86_64-atk
+          ridk exec pacman -S --noconfirm ^
+            mingw-w64-x86_64-toolchain ^
+            mingw-w64-x86_64-glib2 ^
+            mingw-w64-x86_64-pango ^
+            mingw-w64-x86_64-cairo ^
+            mingw-w64-x86_64-atk ^
+            mingw-w64-x86_64-gtk3
           echo "C:\msys64\usr\bin;C:\msys64\mingw64\bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
           echo "PKG_CONFIG_PATH=C:/msys64/mingw64/lib/pkgconfig" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
           echo "PKG_CONFIG=C:/msys64/mingw64/bin/pkg-config.exe" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
