--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -26,15 +26,13 @@ tauri = { version = "2.8.4", default-features = false, features = [
 tauri-plugin-opener = "2.5.0"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-wgpu = "26.0.1"
-webkit2gtk = "2.0.1"
 tauri-plugin-http = "2"
 tauri-plugin-keyring = "0.1.0"
 tauri-plugin-store = "2"
 tauri-plugin-fs = "2"
-rand = "0.9.2"
-sha2 = "0.10.9"
-pbkdf2 = "0.12.2"
+
+[target.'cfg(unix)'.dependencies]
+webkit2gtk = "2.0.1"
 
 [profile.dev]
 incremental = true
