--- a/.gitea/workflows/build.yml
+++ b/.gitea/workflows/build.yml
@@ -23,27 +23,23 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: install dependencies (ubuntu only)
+      - name: Disable initramfs update
         if: startsWith(matrix.platform, 'ubuntu-22.04')
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y --no-install-recommends libwebkit2gtk-4.1 libayatana-appindicator3-1 librsvg2-dev patchelf libgtk-3-dev pkg-config libglib2.0-dev libpango1.0-dev \
-          libcairo2-dev libgdk-pixbuf2.0-dev libatk1.0-dev libharfbuzz-dev pkg-config xdg-utils
+        run: sudo sed -i 's/yes/no/g' /etc/initramfs-tools/update-initramfs.conf
+
+      - name: Disable man-db update
+        if: startsWith(matrix.platform, 'ubuntu-22.04')
+        run: sudo rm -f /var/lib/man-db/auto-update
+
+      - uses: awalsh128/cache-apt-pkgs-action@latest
+        if: startsWith(matrix.platform, 'ubuntu-22.04')
+        with:
+          packages: libwebkit2gtk-4.1 libayatana-appindicator3-1 librsvg2-dev patchelf libgtk-3-dev pkg-config libglib2.0-dev libpango1.0-dev libcairo2-dev libgdk-pixbuf2.0-dev libatk1.0-dev libharfbuzz-dev pkg-config xdg-utils
 
       - name: Setup NodeJS
         uses: actions/setup-node@v4
         with:
           node-version: lts/*
-
-      - name: Setup Bun
-        uses: oven-sh/setup-bun@v2
-        with:
-          bun-version: latest
-
-      - name: Setup Latest Yarn
-        uses: threeal/setup-yarn-action@v2.0.0
-        with:
-          version: latest
 
       - name: Install Rust stable
         uses: dtolnay/rust-toolchain@stable
@@ -55,11 +51,19 @@ jobs:
         with:
           workspaces: "./src-tauri -> target"
 
+      - name: Configure sccache
+        run: |
+          echo "RUSTC_WRAPPER=sccache" >> $GITHUB_ENV
+          echo "SCCACHE_GHA_ENABLED=true" >> $GITHUB_ENV
+
+      - name: Run sccache-cache
+        uses: mozilla-actions/sccache-action@v0.0.9
+
       - name: Install frontend dependencies
-        run: bun ci
+        run: yarn ci
 
       - name: Build the app
-        run: bun run build
+        run: yarn run build
 
       - name: Generate changelog
         run: |
