fix: disable pre release instead release build straight away

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -83,5 +83,5 @@ jobs:
           releaseBody: ${{ github.event.head_commit.message }}
           includeUpdaterJson: true
           releaseDraft: false
-          prerelease: true
+          prerelease: false
           args: ${{ matrix.args }}
