--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@tauri-apps/plugin-fs": "~2.4.2",
     "@tauri-apps/plugin-http": "~2.5.2",
     "@tauri-apps/plugin-opener": "^2.5.0",
+    "@tauri-apps/plugin-process": "~2",
     "@tauri-apps/plugin-store": "~2.4.0",
     "@tauri-apps/plugin-updater": "~2",
     "@types/bun": "^1.2.21",
