--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -29,6 +29,7 @@ tauri-plugin-http = "2"
 tauri-plugin-keyring = "0.1.0"
 tauri-plugin-store = "2"
 tauri-plugin-fs = "2"
+tauri-plugin-process = "2"
 
 [profile.dev]
 incremental = true
