--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -78,10 +78,10 @@ jobs:
           TAURI_SIGNING_PRIVATE_KEY: ${{ secrets.TAURI_SIGNING_PRIVATE_KEY }}
           TAURI_SIGNING_PRIVATE_KEY_PASSWORD: ${{ secrets.TAURI_SIGNING_PRIVATE_KEY_PASSWORD }}
         with:
-          tagName: prerelease-${{ env.SHORT_SHA }}
-          releaseName: "prerelease-${{ env.SHORT_SHA }}"
+          tagName: app-v__VERSION__
+          releaseName: "App v__VERSION__"
           releaseBody: ${{ github.event.head_commit.message }}
           includeUpdaterJson: true
-          releaseDraft: true
+          releaseDraft: false
           prerelease: false
           args: ${{ matrix.args }}
