--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,7 @@ on:
       - main
     paths-ignore:
       - ".gitea/**"
-      - ".github/deploy.yml"
+      - ".github/workflows/deploy.yml"
 
 jobs:
   publish-tauri:
