--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,6 +31,11 @@ jobs:
       - name: Build UI
         run: bun run build:frontend
 
+      - name: Copy demo JSONs
+        run: |
+          mkdir -p dist/assets/jsons
+          cp -r src/public/assets/jsons/* dist/assets/jsons/
+
       - name: Create .nojekyll
         run: touch dist/.nojekyll
 
